moved the cancel buttons to be more keyboard friendly, fixed stat inputs on mobile

--- a/src/components/BuildForm/BuildForm.css
+++ b/src/components/BuildForm/BuildForm.css
@@ -1,6 +1,7 @@
 .stat-input {
   display: flex;
   justify-content: space-between;
+  width: 100%;
 }
 
 .perk-inputs {
